<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/captain_surface_page"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/captain_space_page_horizontal"
        android:paddingEnd="@dimen/captain_space_page_horizontal"
        android:paddingTop="@dimen/captain_space_block"
        android:paddingBottom="@dimen/captain_space_page_horizontal">

        <TextView
            android:id="@+id/page_title"
            style="@style/CaptainText.PageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chess_onboarding_title" />

        <TextView
            style="@style/CaptainText.Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/captain_space_inline"
            android:text="@string/chess_onboarding_tip" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/captain_space_block"
            android:background="@drawable/bg_card_large"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/captain_space_card_inner">

            <ImageView
                android:id="@+id/avatar_preview"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:contentDescription="@string/chess_avatar_preview"
                android:src="@drawable/avatar_chess_helmet_red" />

            <TextView
                style="@style/CaptainText.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/chess_avatar_preview" />

            <TextView
                style="@style/CaptainText.Body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/captain_space_block"
                android:text="@string/chess_username_label"
                android:textColor="@color/captain_text_primary" />

            <EditText
                android:id="@+id/username_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/captain_space_inline"
                android:background="@drawable/bg_button_secondary"
                android:hint="@string/chess_username_hint"
                android:maxLines="1"
                android:padding="14dp"
                android:textColor="@color/captain_text_primary"
                android:textColorHint="@color/captain_text_tertiary" />

        </LinearLayout>

        <Button
            android:id="@+id/pick_local_avatar_button"
            style="@style/CaptainButton.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/captain_space_block"
            android:text="@string/chess_pick_local_avatar" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/avatar_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/captain_space_inline"
            android:nestedScrollingEnabled="false" />

        <Button
            android:id="@+id/save_profile_button"
            style="@style/CaptainButton.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/captain_space_block"
            android:text="@string/chess_save_profile" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
