<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/captain_space_block"
    android:background="@drawable/bg_hero_card"
    android:orientation="vertical"
    android:padding="@dimen/captain_space_home_hero_inner">

    <TextView
        android:id="@+id/hero_eyebrow"
        style="@style/CaptainText.Overline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/captain_hero_eyebrow" />

    <TextView
        android:id="@+id/hero_title"
        style="@style/CaptainText.Hero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/captain_space_inline"
        android:text="@string/captain_hero_title" />

    <TextView
        android:id="@+id/hero_subtitle"
        style="@style/CaptainText.Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/captain_space_inline"
        android:maxLines="2"
        android:text="@string/captain_hero_subtitle"
        android:textColor="@color/captain_text_secondary" />

</LinearLayout>
